--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,20 @@
             <version>4.1.2</version>
 
         </dependency>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+       <!-- https://mvnrepository.com/artifact/ru.sbtqa.tag/page-factory -->
+        <dependency>
+            <groupId>ru.sbtqa.tag</groupId>
+	           <artifactId>page-factory</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
         <dependency>
             <groupId>org.slf4j</groupId>
