--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,17 @@
             <scope>test</scope>
         </dependency>
        <!-- https://mvnrepository.com/artifact/ru.sbtqa.tag/page-factory -->
+        <!-- https://mvnrepository.com/artifact/ru.sbtqa.tag.pagefactory/page-factory-api -->
         <dependency>
-            <groupId>ru.sbtqa.tag</groupId>
-	           <artifactId>page-factory</artifactId>
-            <version>1.3.0</version>
+            <groupId>ru.sbtqa.tag.pagefactory</groupId>
+            <artifactId>page-factory-api</artifactId>
+            <version>16.5.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-support -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-support</artifactId>
+            <version>4.1.3</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
